fix: truncate filename

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -275,15 +275,6 @@
       }
 
       .octotree-patch {
-        display: none;
-      }
-
-      .octotree-patch-name {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .octotree-patch:last-of-type {
         display: inline-flex;
         flex-grow: 1;
 
